alignment fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -448,3 +448,7 @@ img.displayed {
     top: 26px;
   }
 }
+
+ul > li {
+ display: inline-block;
+}
